# makeMistakesToLearnHaskell

./: .gitignore  .gitmodules  .travis.yml  Dockerfile  LICENSE  README.md  appveyor.yml  build-mmlh-reporter.sh  deploy-mmlh-reporter.sh  flake.nix  heroku.yml  makeMistakesToLearnHaskell.cabal  makeThemToLearnHaskell.cabal  package.yaml  run-mmlh-reporter.sh  stack.yaml
app/: Main.hs
assets/: 1.md  10.hs  10.md  11.hs  11.md  12.hs  12.md  13.hs  13.md  14.hs  14.md  15.hs  15.md  16.5.md  16.hs  16.md  17.hs  17.md  18.hs  18.md  19.hs  19.md  2.5.md  2.hs  2.md  20.hs  20.md  21.hs  21.md  22.hs  22.md  3.hs  3.md  4.hs  4.md  5.5.hs  5.5.md  5.hs  5.md  6.hs  (+12 more)
commons/: README.md  mmlh-commons.cabal
commons/src/Education/MakeMistakesToLearnHaskell/Commons/: Exercise.hs
doc/: code-reading.md
reporter/: LICENSE  README.md  mmlh-reporter.cabal
reporter/app/: client.hs  server.hs
reporter/src/Education/MakeMistakesToLearnHaskell/Report/: Client.hs  Server.hs
reporter/test/: Spec.hs
scripts/: docker.sh  gen-error-messages.hs  gen-test-cases.sh  gen-wrong-sources-from-template.sh
scripts/docker/: Dockerfile  entrypoint.sh
src/Education/: .unison.MakeThemToLearnHaskell.hs~.ca5d1fff9751abad1d9a4f5c2603c73c.unison.tmp  MakeMistakesToLearnHaskell.hs  MakeThemToLearnHaskell.hs
src/Education/MakeMistakesToLearnHaskell/: Diagnosis.hs  Env.hs  Error.hs  Exercise.hs  Report.hs  Text.hs
src/Education/MakeMistakesToLearnHaskell/Evaluator/: Command.hs  Ghc.hs  Regex.hs  RunHaskell.hs  Types.hs  Util.hs
src/Education/MakeMistakesToLearnHaskell/Exercise/: CommandLineArg.hs  Core.hs  Ex01.hs  Ex02.hs  Ex02_5.hs  Ex03.hs  Ex04.hs  Ex05.hs  Ex06.hs  Ex07.hs  Ex08.hs  Ex09.hs  Ex10.hs  Ex11.hs  Ex12.hs  Ex13.hs  Ex14.hs  Ex15.hs  Ex16.hs  Ex16_5.hs  Ex17.hs  Ex18.hs  Ex19.hs  Ex20.hs  Ex21.hs  Ex22.hs  FormatMessage.hs  Record.hs  Result.hs  Types.hs
src/Education/MakeMistakesToLearnHaskell/Text/: IO.hs
src/Education/MakeThemToLearnHaskell/: Diagnosis.hs  Env.hs  Error.hs  Exercise.hs  Util.hs
src/Education/MakeThemToLearnHaskell/Evaluator/: RunHaskell.hs  Types.hs  Util.hs
src/Education/MakeThemToLearnHaskell/Exercise/: Record.hs  Types.hs
src/Education/MakeThemToLearnHaskell/Exercise/Evaluator/: RunHaskell.hs
src/System/Environment/: Gourmand.hs
src/imports/: external.hs  io.hs
src/test/imports/: external.hs
test/Education/: MakeMistakesToLearnHaskellSpec.hs  MakeThemToLearnHaskellSpec.hs
test/Education/MakeMistakesToLearnHaskell/: Exercise1Spec.hs  Exercise2Spec.hs  Exercise3Spec.hs  Exercise4Spec.hs  SpecEnv.hs  SpecHelper.hs
test/Education/MakeThemToLearnHaskell/: Exercise1Spec.hs  SpecEnv.hs
test/assets/1/: single-quote-no-main.hs  single-quote.hs  typo.hs
test/assets/1/error-messages/: no-main.txt  single-quote.txt  typo.txt
test/assets/12/: wrong-output1.hs  wrong-output2.hs
test/assets/2/: no-close-paren.hs  no-main.hs  no-number-1.hs  no-number-2.hs  no-number-3.hs  no-open-paren.hs  no-paren.hs  no-slash.hs  no-star.hs  template.hs  typo.hs  wrong-number.hs
test/assets/2/error-messages/: correct.txt  no-close-paren.txt  no-main.txt  no-number-1.txt  no-number-2.txt  no-number-3.txt  no-open-paren.txt  no-paren.txt  no-slash.txt  no-star.txt  template.txt  typo.txt  wrong-number.txt
test/assets/3/: incornsistent-indent.hs  incornsistent-indent2.hs  no-do.hs  no-main.hs  single-quote.hs  typo.hs  wrong-output.hs
test/assets/3/error-messages/: correct.txt  incornsistent-indent.txt  incornsistent-indent1.txt  incornsistent-indent2.txt  no-do.txt  no-main.txt  single-quote.txt  typo.txt  wrong-output.txt
test/assets/4/: arrow-pure.hs  equal-no-space.hs  equal-pure.hs  equal.hs  incornsistent-indent1.hs  incornsistent-indent2.hs  main-arrow.hs  no-arrow.hs  no-close-paren.hs  no-dash.hs  no-do.hs  no-main.hs  no-open-paren1.hs  no-open-paren2.hs  no-open-paren3.hs  no-paren.hs  no-paren1.hs  no-paren2.hs  no-paren3.hs  thick-arrow.hs  wrong-output.hs
test/assets/4/error-messages/: equal-no-space.txt  equal.txt  incornsistent-indent1.txt  incornsistent-indent2.txt  main-arrow.txt  no-arrow.txt  no-close-paren.txt  no-dash.txt  no-do.txt  no-main.txt  no-open-paren1.txt  no-open-paren2.txt  no-open-paren3.txt  no-paren.txt  no-paren1.txt  no-paren2.txt  no-paren3.txt  thick-arrow.txt  wrong-output.txt
web/: package.json  pnpm-lock.yaml
