name:                 makeMistakesToLearnHaskell
version:              0.1.0.0
synopsis:             Make mistakes to learn Haskell!
-- description:
homepage:             https://gitlab.com/igrep/makeMistakesToLearnHaskell#readme
license:              Apache-2.0
license-file:         LICENSE
author:               Yuji Yamamoto
maintainer:           whosekiteneverfly@gmail.com
copyright:            2017 Yuji Yamamoto
category:             Education
build-type:           Simple
extra-source-files:   README.md
cabal-version:        >=1.10
data-files:           assets/*.md
                    , assets/*.hs
extra-source-files:   src/imports/*.hs
                    , src/test/imports/*.hs
-- test data here. see https://stackoverflow.com/questions/29361413/including-data-files-only-in-cabal-test-suites
                    , test/assets/1/*.hs
                    , test/assets/common/*.hs

library
  hs-source-dirs:       src
  include-dirs:         src
  exposed-modules:      Education.MakeMistakesToLearnHaskell
                      , Education.MakeMistakesToLearnHaskell.Env
                      , Education.MakeMistakesToLearnHaskell.Evaluator.Types
                      , Education.MakeMistakesToLearnHaskell.Exercise
                      , Education.MakeMistakesToLearnHaskell.Exercise.Types
  other-modules:        Paths_makeMistakesToLearnHaskell
                      , Education.MakeMistakesToLearnHaskell.Diagnosis
                      , Education.MakeMistakesToLearnHaskell.Error
                      , Education.MakeMistakesToLearnHaskell.Evaluator.RunHaskell
                      , Education.MakeMistakesToLearnHaskell.Exercise.Record
                      , Education.MakeMistakesToLearnHaskell.Text
  -- ghc-options:          -Wno-unused-imports
  -- ^ Why doesn't -Wno-unused-imports work?
  build-depends:        base >= 4.7 && < 5
  -- TODO: Decide version
                      , QuickCheck
                      , bytestring
                      , directory
                      , errors
                      , filepath
                      , hint
                      -- , i18n Use in the future
                      , NoTrace
                      , safe
                      , text
                      , transformers
                      , typed-process
                      , vector
                      , Win32
                      , yaml
  default-language:     Haskell2010
  default-extensions:   CPP
                      , DeriveGeneric
                      , DeriveDataTypeable
                      , OverloadedStrings

executable mmlh
  hs-source-dirs:       app
  main-is:              Main.hs
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  build-depends:        base
                      , makeMistakesToLearnHaskell
  default-language:     Haskell2010

test-suite makeMistakesToLearnHaskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Paths_makeMistakesToLearnHaskell
                     , Education.MakeMistakesToLearnHaskellSpec
                     , Education.MakeMistakesToLearnHaskell.Exercise1Spec
                     , Education.MakeMistakesToLearnHaskell.Exercise2Spec
                     , Education.MakeMistakesToLearnHaskell.Exercise3Spec
                     , Education.MakeMistakesToLearnHaskell.Exercise4Spec
                     , Education.MakeMistakesToLearnHaskell.SpecEnv
                     , Education.MakeMistakesToLearnHaskell.SpecHelper
  build-depends:       base
                     , makeMistakesToLearnHaskell
                     , bytestring
                     , directory
                     , filepath
                     , hspec
                     , hspec-core
                     , main-tester >= 0.2
                     , QuickCheck
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:   CPP
                      , OverloadedStrings

source-repository head
  type:     git
  location: https://gitlab.com/igrep/makeMistakesToLearnHaskell.git
