name:                 makeThemToLearnHaskell
version:              0.1.0.0
synopsis:             Make apps (and mistakes) to learn Haskell!
-- description:
homepage:             https://gitlab.com/igrep/makeThemToLearnHaskell#readme
license:              Apache-2.0
license-file:         LICENSE
author:               Yuji Yamamoto
maintainer:           whosekiteneverfly@gmail.com
copyright:            2017 Yuji Yamamoto
category:             Education
build-type:           Simple
extra-source-files:   README.md
cabal-version:        >=1.10
data-files:           assets/*.md
                    , assets/*.hs
extra-source-files:   src/imports/*.hs

library
  hs-source-dirs:       src
  include-dirs:         src
  exposed-modules:      Education.MakeThemToLearnHaskell
  other-modules:        Paths_makeThemToLearnHaskell
                      , Education.MakeThemToLearnHaskell.Exercise
                      , Education.MakeThemToLearnHaskell.Exercise.Record
                      , Education.MakeThemToLearnHaskell.Exercise.Types
                      , Education.MakeThemToLearnHaskell.Exercise.Evaluator.RunHaskell
                      , Education.MakeThemToLearnHaskell.Util
  -- ghc-options:          -Wno-unused-imports
  -- ^ Why doesn't -Wno-unused-imports work?
  build-depends:        base >= 4.7 && < 5
  -- TODO: Decide version
                      , QuickCheck
                      , bytestring
                      , directory
                      , errors
                      , filepath
                      , hint
                      -- , i18n Use in the future
                      , safe
                      , silently
                      , text
                      , transformers
                      , typed-process
                      , vector
                      , yaml
  default-language:     Haskell2010
  default-extensions:   CPP
                      , DeriveGeneric
                      , DeriveDataTypeable
                      , OverloadedStrings

executable mtlh
  hs-source-dirs:       app
  main-is:              Main.hs
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  build-depends:        base
                      , makeThemToLearnHaskell
  default-language:     Haskell2010

test-suite makeThemToLearnHaskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , makeThemToLearnHaskell
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://gitlab.com/igrep/makeThemToLearnHaskell
