name:                 makeThemToLearnHaskell
version:              0.1.0.0
synopsis:             Make apps (and mistakes) to learn Haskell!
-- description:
homepage:             https://gitlab.com/igrep/makeThemToLearnHaskell#readme
license:              Apache-2.0
license-file:         LICENSE
author:               Yuji Yamamoto
maintainer:           whosekiteneverfly@gmail.com
copyright:            2017 Yuji Yamamoto
category:             Education
build-type:           Simple
extra-source-files:   README.md
cabal-version:        >=1.10
data-files:           assets/*.md
                    , assets/*.hs
extra-source-files:   src/imports/*.hs
-- test data here. see https://stackoverflow.com/questions/29361413/including-data-files-only-in-cabal-test-suites
                    , test/assets/1/*.hs
                    , test/assets/common/*.hs

library
  hs-source-dirs:       src
  include-dirs:         src
  exposed-modules:      Education.MakeThemToLearnHaskell
  other-modules:        Paths_makeThemToLearnHaskell
                      , Education.MakeThemToLearnHaskell.Diagnosis
                      , Education.MakeThemToLearnHaskell.Env
                      , Education.MakeThemToLearnHaskell.Error
                      , Education.MakeThemToLearnHaskell.Evaluator.RunHaskell
                      , Education.MakeThemToLearnHaskell.Evaluator.Types
                      , Education.MakeThemToLearnHaskell.Evaluator.Util
                      , Education.MakeThemToLearnHaskell.Exercise
                      , Education.MakeThemToLearnHaskell.Exercise.Record
                      , Education.MakeThemToLearnHaskell.Exercise.Types
  -- ghc-options:          -Wno-unused-imports
  -- ^ Why doesn't -Wno-unused-imports work?
  build-depends:        base >= 4.7 && < 5
  -- TODO: Decide version
                      , QuickCheck
                      , bytestring
                      , directory
                      , errors
                      , filepath
                      , hint
                      -- , i18n Use in the future
                      , safe
                      , text
                      , transformers
                      , typed-process
                      , vector
                      , Win32
                      , yaml
  default-language:     Haskell2010
  default-extensions:   CPP
                      , DeriveGeneric
                      , DeriveDataTypeable
                      , OverloadedStrings

executable mtlh
  hs-source-dirs:       app
  main-is:              Main.hs
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  build-depends:        base
                      , makeThemToLearnHaskell
  default-language:     Haskell2010

test-suite makeThemToLearnHaskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Paths_makeThemToLearnHaskell
                     , Education.MakeThemToLearnHaskellSpec
  build-depends:       base
                     , makeThemToLearnHaskell
                     , bytestring
                     , directory
                     , filepath
                     , hspec
                     , hspec-core
                     , QuickCheck
                     , typed-process
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:   CPP
                      , OverloadedStrings

source-repository head
  type:     git
  location: https://gitlab.com/igrep/makeThemToLearnHaskell
