name:                mmlh-commons
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/haskell-jp/makeMistakesToLearnHaskell/tree/master/commons#readme
license:             Apache-2.0
license-file:        LICENSE
author:              Japan Haskell User Group
maintainer:          Yuji Yamamoto <whosekiteneverfly@gmail.com>
copyright:           2019 Japan Haskell User Group
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
      Education.MakeMistakesToLearnHaskell.Commons.Exercise
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/haskell-jp/makeMistakesToLearnHaskell
